--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,50 @@
+:root {
+  --pink: #f495a7;
+  --orange: #faaa49;
+  --blue: #89cff0;
+  --black: #49353a;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-size: 18px;
 }
 
 a {
-  color: inherit;
+  color: blue;
   text-decoration: none;
 }
+a:hover {
+  text-decoration: underline;
+}
 
-* {
-  box-sizing: border-box;
+main {
+  background: linear-gradient(45deg, var(--blue), white);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 10rem;
+  margin: auto;
+}
+
+input[type='text'], input[type='password'], input[type='email'] {
+  margin-bottom: 1.5rem;
+  height: 1rem;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+button {
+  width: 4rem;
+  height: 1.5rem;
 }
